src/App.css
.App {
  text-align: center;
}
.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-image:
  linear-gradient(to bottom right, #FF0866 50%, rgb(249, 234, 234) 50%);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  text-shadow: 1px 1px black;
}

.bg-video {
  text-align: center;
  position: relative;
  height: 30vh;
  width: 100%;
  border-radius: 5px;
  margin: 0 10px 0 0;
  box-shadow: 5px 8px rgb(53, 8, 8);
  border: 1px solid black;
}

.bg-video__content {
  z-index: -1;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
}

.header-text {
  height: 80vh;
  width: 100vw;
  position: absolute;
  
}

.my-name {
  position: relative;
  left: -20%;
  top: 30%;
}

.my-title {
  position: relative;
  left: 22%;
  top: 40%;
  color: #FF0866;
  text-shadow: 1px 1px black;
}
.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

nav {
  width: 100vw;
  position: fixed;
  top: 0;
  transition: top 0.6s;
  z-index: 1;
  background-color: rgba(80, 47, 103, 0.927);
  border-bottom-style: solid;
  border-bottom-color: rgb(255, 255, 255);
}

.navbar--hidden {
  top: -50px;
}

.navbar {
  display: flex;
  justify-content: space-between;
}

nav li{
  display: inline;
  padding: 0px 30px;
  font-size: 20px;
}

nav li:hover{
  color:#33FFDA;
}

nav a {
  text-decoration: none;
  color: white;
  padding: 0 15px;
}

a {
  text-decoration: none;
  color: black;
}
main {
  justify-content: center;
}

ul {
  list-style-type: none;
}
.main-background {
  background-color:rgb(249, 234, 234);
  color: black;
  transition:all 0.3s ease;
}

li {
  list-style-type: none;
}

h2 {
  text-align: center;
}

h3 {
  text-align: center;
}

button {
  margin: 20px;
}

.profile-container {
  background-color: rgb(249, 234, 234);
  color: white;
  background-image: 
  linear-gradient(to bottom left, #FF0866, black 50%);
}

.about {
  padding: 100px 0px;
  display: flex;
  min-width: 100vw;
  min-height: 50vh;
  text-align: left;
  justify-content: space-around;
}

.profile {
  max-width: 50vw;
  height: 60vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: center;
}

.profile-pic {
  background-image: url('images/profile-pic.jpg');
  height: 45vh;
  width: 25vw;
  background-position: 50% 20%;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 50%;
}

#resume {
  padding: 10px;
  height: 40px;
  width: 140px;
  color: white;
  border: 1px solid white;
}
#resume2 {
  display: none;
  padding: 10px;
  height: 40px;
  width: 140px;
  color: white;
  border: 1px solid white;
}
.about-text {
  max-width: 50vw;
  padding: 30px;
}

.skills {
  display: flex;
  justify-content: space-evenly;
  position: relative;
}

.skills-title {
  display: flex;
  justify-content: space-evenly;
}

.skill-list {
  transition:all 1s ease;
  text-align: center;
}

.list-item {
  border: 1px solid white;
}

.projects-container {
  background-color: rgb(249, 234, 234);
  text-align: center;
  min-width: 100vw;
}

.projects {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  min-width: 100vw;
  justify-content: space-around;
}

.projects-title {
  width: 20vw;
  margin: auto;
  color: black;
}
.single-project {
  min-width: 20vw;
  max-width: 20vw;
  padding: 0 20px;
  margin: 20px 10px;
  text-align: left;
  box-shadow: 0 4px 8px 3px rgba(0,0,0,0.2);
  opacity: 1;
  transition:all 0.3s ease;
  background-color: white;
}

.single-project:hover {
  transition:all 0.5s ease;
  opacity: 0.5;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

#goat-contain {
  background-image: url('images/mygoat.jpg');
  min-height: 30vh;
  background-size: cover;
  background-repeat: no-repeat;
  border-radius: 5px;
  margin: 0 10px 0 0;
  box-shadow: 5px 8px rgb(53, 8, 8);
}

#holendary-contain {
  background-image: url('https://www.hellomagazine.com/imagenes/travel/2018072750655/75-things-you-need-to-pack-holidays/0-247-939/Packing-suitcase-t.jpg');
  min-height: 30vh;
  background-size: cover;
  background-repeat: no-repeat;
  border-radius: 5px;
  margin: 0 10px 0 0;
  box-shadow: 5px 8px rgb(53, 8, 8);
}

#bestbuyz-contain {
  background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80');
  min-height: 30vh;
  background-size: cover;
  background-repeat: no-repeat;
  border-radius: 5px;
  margin: 0 10px 0 0;
  box-shadow: 5px 8px rgb(53, 8, 8);
}

@media only screen and (max-width: 650px) {
  .my-title {
    top: 45%;
  }
  .about {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .profile-pic {
    height: 45vh;
    min-width: 50vw;
    background-position: 20% 20%;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: 5px 10px 5px 5px black;
  }
  .skills {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .about-text {
    margin: -60px auto;
    text-align: center;
  }
  .projects {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  #resume {
    display: none;
  }
  #resume2 {
    display: block;
  }
  .single-project {
    min-width: 45vw;
    max-width: 45vw;
    padding: 0 20px;
    margin: 20px 10px;
    text-align: left;
    box-shadow: 0 4px 8px 3px rgba(0,0,0,0.2);
    opacity: 1;
    transition:all 0.3s ease;
    background-color: white;
  }
}

